# solid_gemc

./: README.md  log_change  log_svn2git  set_solid
CaloSim/: .directory  .nfs000000001a400327000000b4  CaloSim.cc  GNUmakefile  README  run.sh
CaloSim/include/: CaloSimDetectorConstruction.hh  CaloSimDetectorHit.hh  CaloSimPhysicsList.hh  CaloSimPrimaryGeneratorAction.hh  CaloSimPrimaryGeneratorMessenger.hh  CaloSimRunAction.hh  CaloSimSD.hh  CaloSimSteppingVerbose.hh  Config.h
CaloSimShashlik/: .project  CMakeLists.txt  CaloSim.cc  CaloSimShashlik  CaloSimShashlik.cc  LowEBgd1.root  LowEBgd2.root  README  SIDIS_LAEC_coordinates.coord  out.root  script  syncmitnig.sh  update_exe.sh
CaloSimShashlik/cmake/modules/: CMakeMacroParseArguments.cmake  FindROOT.cmake
CaloSimShashlik/exe/PVDIS_5mm/: Config.h
CaloSimShashlik/exe/PVDIS_6mm/: Config.h
CaloSimShashlik/exe/SIDIS_Forward_4mm/: Config.h
CaloSimShashlik/exe/SIDIS_Forward_5mm/: Config.h
CaloSimShashlik/exe/SIDIS_Forward_6mm/: Config.h
CaloSimShashlik/exe/SIDIS_Forward_8mm/: Config.h
CaloSimShashlik/exe/SIDIS_Large_5mm/: Config.h
CaloSimShashlik/exe/SIDIS_Large_8mm/: Config.h
CaloSimShashlik/include/: CaloSimMagneticField.hh  CaloSimParticleGunMessenger.hh  CaloSimPrimaryGeneratorMessenger.hh  CaloSimVisManager.hh  Config.h
CaloSimShashlik/mac/: 10_2GeV.mac  1e3_1.5GeV.mac  1e3_2.5GeV.mac  1e4_2.0GeV.mac  LowEBgd.mac  LowEBgdElec.mac  RunTest0B.mac  RunTest1.5By.mac  RunTest1.5Bz.cp1.mac  RunTestKaon0B.mac  RunTestKaon1.5Bz.mac  SIDIS_Forward_Run.mac  SIDIS_Forward_RunPi.mac  SIDIS_Large_Run.mac  SIDIS_Large_RunPi.mac  TestFile.mac  TestFile2.mac  TestFile3.mac  TestFile3_RunPi.mac  TestFileRun.mac  TestFile_Layout_Run.mac  TestFile_Run.mac  vis.mac
CaloSimShashlik/old/: CaloSim.2ndBatchRun  CaloSim.FirstBatchRun
CaloSimShashlik/response/: Elec.10.11.12.root_DrawLowEBgd_EDepShowerOverE_Dist_Read.root  FastResponse.C  FastResponse_C.d  Proton.run10x.root_DrawLowEBgd_EDepShowerOverE_Dist_Read.root
CaloSimShashlik/src/: .directory  CaloSimDetectorConstruction.cc  CaloSimRunAction.cc  CaloSimSD.cc
analysis/: SoLIDFileReduce.C  SoLIDFileReduce2.C  analysis_PVDIS.C  analysis_SIDIS.C  analysis_SIDIS_Ye_modified.C  analysis_tree_solid_ec.C  analysis_tree_solid_hgc.C  getnumber_SIDIS_He3_win  getnumber_SIDIS_NH3  log_JPsi_LH2  log_PVDIS_LD2  log_SIDIS_He3  log_SIDIS_NH3  readme
evgen/: .root_hist  README.txt  main.f  plotphase.C  rates.C
evgen/cteq-pdf-1.0.4/cteq-tbls/ctq65-pds/: Makefile.am  Makefile.in
evgen/cteq-pdf-1.0.4/cteq-tbls/ctq66m/: Makefile.am  Makefile.in
evgen/solid_inclusive_e/: CMakeLists.txt  readme  setup  solid_inclusive_e.C
evgen/solid_inclusive_e/include/: christy_bosted_inelastic_QE.h  constants.h  fixed_target_xs.h  neutron_DIS.h  proton_DIS.h
evgen/solid_inclusive_e/src/: christy_bosted_inelastic_QE.C  fixed_target_xs.C  neutron_DIS.C  proton_DIS.C
field/: CLEOv9.am  mapcompress3D.C  oxford_field.f  oxford_ptarget.root  plot_solenoid.C  readme
script/: readme  solid_DDVCS_JPsi_LH2_full.gcard  solid_JPsi_LH2_full.gcard  solid_JPsi_LH2_full_moved.gcard  solid_JPsi_LH2_moved_full.gcard  solid_PVDIS_LD2.gcard  solid_PVDIS_LD2_full.gcard  solid_PVDIS_LD2_full_moved.gcard  solid_PVDIS_LD2_moved_full.gcard  solid_PVDIS_LD2_moved_noField.gcard  solid_SIDIS_He3.gcard  solid_SIDIS_He3_full.gcard  solid_SIDIS_He3_full_moved.gcard  solid_SIDIS_He3_moved_full.gcard  solid_SIDIS_He3_moved_noField.gcard  solid_SIDIS_He3_simple.gcard  solid_SIDIS_NH3.gcard  solid_SIDIS_NH3_full.gcard  solid_SIDIS_NH3_full_moved.gcard  solid_SIDIS_NH3_moved_full.gcard  solid_SIDIS_NH3_simple.gcard  solid_slice_nohit.vis
solgemc/: README  SConstruct  solgemc.cc
solid_tcs_proposal/: Angle.eps  Asymmetry_E_10_t_01_Q_2_nice.eps  Asymmetry_xi_nice.eps  BH.eps  BHIntLO.eps  BHIntNLO.eps  ImH_theta.eps  Miss_2D.eps  R.eps  R_DD_2012.eps  R_DD_2012_E78.eps  R_Data_Theory.eps  R_NLO.eps  R_Q2bin.eps  R_dep_theta_var_6GeV.eps  R_etabin.eps  ReH_theta.eps  SoLID_setup_20130225_TCS_arrow.eps  TCS407.eps  TCSRatioIm.eps  TCSRatioRe.eps  TCS_Handbag.epsi  TCS_Im_2x2_nice.eps  TCS_Re_2x2_nice.eps  TCS_sketch.epsi  TCS_sketch_2.epsi  TCStoDVCS_1x2_nice.eps  acc_m_eg9.eps  acc_q2-t_s.eps  acc_theta_phi_s18p5.eps  cd.eps  clas12_detector.eps  cm_theta_phi_4p5_9p39_0p3.eps  comp_DD_Dterm.eps  comp_DD_Dterm_Q2_5.eps  comp_DD_Dual.eps  comp_DD_Dual_Q2_5.eps  comp_DD_Dual_tdep.eps  comp_DD_Dual_tdep_Q2_5.eps  dndm_100days.eps  (+59 more)
solidsim/: GNUmakefile  History  README  SolidSim.cc  soliddox.conf
(+1655 files in other folders)
