AUTOMAKE_OPTIONS = foreign

datadir=@datadir@/cteq-pdf/ctq65-pds

dist_data_DATA = ctq65.08.pds ctq65.17.pds ctq65.26.pds ctq65.35.pds \
ctq65.00.pds ctq65.09.pds ctq65.18.pds ctq65.27.pds ctq65.36.pds \
ctq65.01.pds ctq65.10.pds ctq65.19.pds ctq65.28.pds ctq65.37.pds \
ctq65.02.pds ctq65.11.pds ctq65.20.pds ctq65.29.pds ctq65.38.pds \
ctq65.03.pds ctq65.12.pds ctq65.21.pds ctq65.30.pds ctq65.39.pds \
ctq65.04.pds ctq65.13.pds ctq65.22.pds ctq65.31.pds ctq65.40.pds \
ctq65.05.pds ctq65.14.pds ctq65.23.pds ctq65.32.pds ctq65.06.pds \
ctq65.15.pds ctq65.24.pds ctq65.33.pds ctq65.07.pds ctq65.16.pds \
ctq65.25.pds ctq65.34.pds
