AUTOMAKE_OPTIONS = foreign

datadir=@datadir@/cteq-pdf/ctq66m

dist_data_DATA = ctq66.09.pds ctq66.19.pds ctq66.29.pds ctq66.39.pds \
ctq66.00.pds ctq66.10.pds ctq66.20.pds ctq66.30.pds ctq66.40.pds \
ctq66.01.pds ctq66.11.pds ctq66.21.pds ctq66.31.pds ctq66.41.pds \
ctq66.02.pds ctq66.12.pds ctq66.22.pds ctq66.32.pds ctq66.42.pds \
ctq66.03.pds ctq66.13.pds ctq66.23.pds ctq66.33.pds ctq66.43.pds \
ctq66.04.pds ctq66.14.pds ctq66.24.pds ctq66.34.pds ctq66.44.pds \
ctq66.05.pds ctq66.15.pds ctq66.25.pds ctq66.35.pds ctq66.06.pds \
ctq66.16.pds ctq66.26.pds ctq66.36.pds ctq66.07.pds ctq66.17.pds \
ctq66.27.pds ctq66.37.pds ctq66.08.pds ctq66.18.pds ctq66.28.pds \
ctq66.38.pds
